--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "booklist",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Aravindh-SNR.github.io/reading-list-app",
+  "homepage": "https://aravindh-snr.github.io/reading-list-app",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
